# AutoMaxFix

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  STYLE.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/actions/automaxfix-action/: action.yml
.github/workflows/: automaxfix-on-fail.yml  ci.yml  publish.yml  release.yml
automaxfix/: __init__.py  agent_runner.py  approval.py  cli.py  config.py  llm_provider.py  metrics.py  models.py  observability.py  patch_parser.py  patcher.py  prompt_templates.py  reliability.py  reporter.py  reproducer.py  safety.py  sanitize.py  scanner.py  test_runner.py  ticket.py  utils.py  watcher.py  workspace.py
automaxfix/scanners/: __init__.py  _common.py  cargo.py  generic.py  go.py  jest.py  mocha.py  pytest.py  vitest.py
docs/: ci-integration.md
docs/adr/: 001-one-ticket-per-run.md
docs/runbooks/: watch-mode-hang.md
examples/: automaxfix.yml  broken_pytest_output.txt  bug_report.md
tests/: helpers.py  test_agent_runner.py  test_approval.py  test_ci_yaml_valid.py  test_cli.py  test_cli_scan_formats.py  test_config.py  test_patch_parser.py  test_phase2_cli.py  test_phase3_max_attempts.py  test_phase3_retry.py  test_reporter.py  test_reproducer.py  test_safety.py  test_scanner.py  test_scanners_cargo.py  test_scanners_generic.py  test_scanners_go.py  test_scanners_jest.py  test_scanners_mocha.py  test_scanners_vitest.py  test_strategy_memo.py  test_test_runner.py  test_ticket.py  test_watch_loop.py  test_workspace.py
tests/fixtures/cargo/: failures.txt  passed.txt  (+1 more)
(+12 files in other folders)
